--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- CSS STYLES -->
     <link rel="stylesheet" href="./Styles/font.css" />
+
     <!-- DAISY UI CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css"
@@ -23,7 +24,29 @@
     />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class=".lexend-normal">
-    <h1>Donate Bangladesh</h1>
+  <body class="lexend-normal">
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-36">
+      <!-- NAVBAR START -->
+
+      <nav class="navbar bg-base-100 justify-evenly bg-[#F9F7F3] pt-6 pb-16">
+        <button
+          class="btn px-8 text-xl font-semibold text-[#111111 bg-[#B4F461]"
+        >
+          Blog
+        </button>
+        <div>
+          <img class="w-12" src="./assets/logo.png" alt="icon" />
+          <h1 class="pl-4 text-xl font-semibold text-[#111111]">
+            Donate Bangladesh
+          </h1>
+        </div>
+        <div>
+          <img class="w-7" src="./assets/coin.png" alt="icon" />
+          <p class="pl-3 text-xl font-medium text-[#111111]">5500 BDT</p>
+        </div>
+      </nav>
+
+      <!-- NAVBAR END -->
+    </main>
   </body>
 </html>
