modal part compelete

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div
             class="flex w-28 h-11 text-xl rounded-lg text-center justify-center items-center font-semibold text-[#111111] bg-[#111111]/5"
           >
-            <img src="./assets/coin.png" alt="coin-icon" />0 BDT
+            <img class="pr-2" src="./assets/coin.png" alt="coin-icon" />0 BDT
           </div>
 
           <div>
