invalid input logic problem not fixed

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           </div>
           <div>
             <button
-              id="btn-donate"
+              id="btn-noakhali-donate"
               class="btn w-full text-[#111111] bg-[#B4F461]"
             >
               Donate Now
@@ -176,7 +176,7 @@
           </div>
           <div>
             <button
-              id="btn-donate"
+              id="btn-feni-donate"
               class="btn w-full text-[#111111] bg-[#B4F461]"
             >
               Donate Now
@@ -233,7 +233,7 @@
           </div>
           <div>
             <button
-              id="btn-donate"
+              id="btn-quota-donate"
               class="btn w-full text-[#111111] bg-[#B4F461]"
             >
               Donate Now
@@ -245,7 +245,7 @@
     </main>
 
     <!-- Javascript  -->
-    <script src="./js/addMoney.js"></script>
+    <script src="./js/donateMoney.js"></script>
     <script src="./js/currentBalance.js"></script>
     <script src="./js/utilities.js"></script>
   </body>
