--- a/alert.html
+++ b/alert.html
@@ -36,5 +36,11 @@
         <button class="btn btn-sm">Close Confirmation</button>
       </div>
     </main>
+
+    <!-- JavaScript -->
+    <script src="./js/donateMoney.js"></script>
+    <script src="./js/currentBalance.js"></script>
+    <script src="./js/utilities.js"></script>
+    <script src="./js/features.js"></script>
   </body>
 </html>
