--- a/index.html
+++ b/index.html
@@ -24,229 +24,246 @@
     />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
+
   <body class="lexend-normal">
     <main class="max-w-screen-xl mx-auto px-16 lg:px-36">
-      <!-- NAVBAR START -->
+      <!-- NAVBAR AND TOGGLE BUTTON START -->
 
-      <nav class="navbar bg-base-100 justify-evenly bg-[#F9F7F3] pt-6 pb-16">
-        <button
-          class="btn px-8 text-xl font-semibold text-[#111111] bg-[#B4F461]"
-        >
-          Blog
-        </button>
-        <div>
-          <img class="w-12" src="./assets/logo.png" alt="brand-logo" />
-          <h1 class="pl-4 text-xl font-semibold text-[#111111]">
-            Donate Bangladesh
-          </h1>
-        </div>
-        <div>
-          <img class="w-7" src="./assets/coin.png" alt="coin-icon" />
-          <p class="pl-3 text-xl font-medium text-[#111111]">
-            <span id="current-balance">5500</span><span class="pl-1">BDT</span>
-          </p>
-        </div>
-      </nav>
-
-      <!-- NAVBAR END -->
-
-      <!-- TOGGLE BUTTON START -->
-
-      <div class="w-80 justify-center items-center pt-20 pb-8 mx-auto">
-        <div>
-          <!-- Left-Side Button -->
+      <div class="sticky top-0 bg-[#F9F7F3] z-50">
+        <!-- NAVBAR -->
+        <nav class="navbar bg-base-100 justify-evenly pt-6 pb-4">
           <button
             class="btn px-8 text-xl font-semibold text-[#111111] bg-[#B4F461]"
           >
-            Donation
+            Blog
           </button>
-
-          <!-- Right-Side Button -->
-          <button class="btn px-8 text-xl font-semibold text-[#111111]">
-            History
-          </button>
-        </div>
-      </div>
-
-      <!-- TOGGLE BUTTON END -->
-
-      <!-- CARD NO. #1 START -->
-      <div
-        class="w-auto h-[453px] p-8 mb-8 card lg:card-side bg-base-100 shadow-xl"
-      >
-        <!-- Image Body -->
-        <figure>
-          <img
-            class="w-[522px] h-[389px] self-stretch"
-            src="./assets/noakhali.png"
-            alt="flood"
-          />
-        </figure>
-
-        <!-- Card Text -->
-        <div class="pl-8 space-y-6">
-          <div
-            class="flex w-40 h-11 text-xl rounded-lg text-center justify-center items-center font-semibold text-[#111111] bg-[#111111]/5"
-          >
-            <img class="pr-2" src="./assets/coin.png" alt="coin-icon" /><span
-              id="noakhali-new-balance"
-              >0</span
-            ><span class="pl-1">BDT</span>
+          <div class="flex items-center">
+            <img class="w-12" src="./assets/logo.png" alt="brand-logo" />
+            <h1 class="pl-4 text-xl font-semibold text-[#111111]">
+              Donate Bangladesh
+            </h1>
           </div>
-
-          <div>
-            <h2 class="card-title">Donate for Flood at Noakhali, Bangladesh</h2>
-          </div>
-          <div>
-            <p class="w-[520px] h-32 pb-6">
-              The recent floods in Noakhali have caused significant damage to
-              homes infrastructure. Your donation will help provide essential
-              supplies and to those affected by this disaster. Every
-              contribution, big or small, makes difference. Please join us in
-              supporting the relief efforts and making a positive impact on the
-              lives of those in need.
+          <div class="flex items-center">
+            <img class="w-7" src="./assets/coin.png" alt="coin-icon" />
+            <p class="pl-3 text-xl font-medium text-[#111111]">
+              <span id="current-balance">5500</span
+              ><span class="pl-1">BDT</span>
             </p>
           </div>
+        </nav>
+
+        <!-- TOGGLE BUTTON -->
+        <div class="w-80 justify-center items-center pt-4 pb-8 mx-auto">
           <div>
-            <input
-              type="text"
-              placeholder="Write Donation Amount"
-              id="noakhali-input-money"
-              class="input input-bordered w-full max-w-auto"
-            />
-          </div>
-          <div>
+            <!-- Left-Side Button -->
             <button
-              id="btn-noakhali-donate"
-              class="btn w-full text-[#111111] bg-[#B4F461]"
+              id="show-donation"
+              class="btn px-8 text-xl font-semibold text-[#111111] bg-[#B4F461]"
             >
-              Donate Now
+              Donation
+            </button>
+
+            <!-- Right-Side Button -->
+            <button
+              id="show-history"
+              class="btn px-8 text-xl font-semibold text-[#111111]"
+            >
+              History
             </button>
           </div>
         </div>
       </div>
-      <!-- CARD NO. #1 END -->
 
-      <!-- CARD NO. #2 START -->
-      <div
-        class="w-auto h-[453px] p-8 mb-8 card lg:card-side bg-base-100 shadow-xl"
-      >
-        <!-- Image Body -->
-        <figure>
-          <img
-            class="w-[522px] h-[389px] self-stretch"
-            src="./assets/noakhali.png"
-            alt="flood"
-          />
-        </figure>
+      <!-- NAVBAR AND TOGGLE BUTTON END -->
+      <div id="donation-container">
+        <!-- CARD NO. #1 START -->
 
-        <!-- Card Text -->
-        <div class="pl-8 space-y-6">
-          <div
-            class="flex w-40 h-11 text-xl rounded-lg text-center justify-center items-center font-semibold text-[#111111] bg-[#111111]/5"
-          >
-            <img class="pr-2" src="./assets/coin.png" alt="coin-icon" /><span
-              id="feni-new-balance"
-              >0</span
-            ><span class="pl-1">BDT</span>
-          </div>
-
-          <div>
-            <h2 class="card-title">
-              Donate for Flood Relief in Feni,Bangladesh
-            </h2>
-          </div>
-          <div>
-            <p class="w-[520px] h-32 pb-6">
-              The recent floods in Feni have devastated local communities,
-              leading to severe disruption and loss. Your generous donation will
-              help provide immediate aid, including food, clean water, and
-              medical supplies, to those affected by this calamity. Together, we
-              can offer crucial support and help rebuild lives in the aftermath
-              of this disaster.
-            </p>
-          </div>
-          <div>
-            <input
-              type="text"
-              placeholder="Write Donation Amount"
-              id="feni-input-money"
-              class="input input-bordered w-full max-w-auto"
+        <div
+          class="w-auto h-[453px] p-8 mb-8 card lg:card-side bg-base-100 shadow-xl"
+        >
+          <!-- Image Body -->
+          <figure>
+            <img
+              class="w-[522px] h-[389px] self-stretch"
+              src="./assets/noakhali.png"
+              alt="flood"
             />
-          </div>
-          <div>
-            <button
-              id="btn-feni-donate"
-              class="btn w-full text-[#111111] bg-[#B4F461]"
+          </figure>
+
+          <!-- Card Text -->
+          <div class="pl-8 space-y-6">
+            <div
+              class="flex w-40 h-11 text-xl rounded-lg text-center justify-center items-center font-semibold text-[#111111] bg-[#111111]/5"
             >
-              Donate Now
-            </button>
+              <img class="pr-2" src="./assets/coin.png" alt="coin-icon" /><span
+                id="noakhali-new-balance"
+                >0</span
+              ><span class="pl-1">BDT</span>
+            </div>
+
+            <div>
+              <h2 class="card-title">
+                Donate for Flood at Noakhali, Bangladesh
+              </h2>
+            </div>
+            <div>
+              <p class="w-[520px] h-32 pb-6">
+                The recent floods in Noakhali have caused significant damage to
+                homes infrastructure. Your donation will help provide essential
+                supplies and to those affected by this disaster. Every
+                contribution, big or small, makes difference. Please join us in
+                supporting the relief efforts and making a positive impact on
+                the lives of those in need.
+              </p>
+            </div>
+            <div>
+              <input
+                type="text"
+                placeholder="Write Donation Amount"
+                id="noakhali-input-money"
+                class="input input-bordered w-full max-w-auto"
+              />
+            </div>
+            <div>
+              <button
+                id="btn-noakhali-donate"
+                class="btn w-full text-[#111111] bg-[#B4F461]"
+              >
+                Donate Now
+              </button>
+            </div>
           </div>
         </div>
-      </div>
-      <!-- CARD NO. #2 END -->
 
-      <!-- CARD NO. #3 START -->
-      <div
-        class="w-auto h-[453px] p-8 mb-8 card lg:card-side bg-base-100 shadow-xl"
-      >
-        <!-- Image Body -->
-        <figure>
-          <img
-            class="w-[522px] h-[389px] self-stretch"
-            src="./assets/noakhali.png"
-            alt="flood"
-          />
-        </figure>
+        <!-- CARD NO. #1 END -->
 
-        <!-- Card Text -->
-        <div class="pl-8 space-y-6">
-          <div
-            class="flex w-40 h-11 text-xl rounded-lg text-center justify-center items-center font-semibold text-[#111111] bg-[#111111]/5"
-          >
-            <img class="pr-2" src="./assets/coin.png" alt="coin-icon" /><span
-              id="quota-new-balance"
-              >0</span
-            ><span class="pl-1">BDT</span>
-          </div>
+        <!-- CARD NO. #2 START -->
 
-          <div>
-            <h2 class="card-title">Aid for Injured in the Quota Movement</h2>
-          </div>
-          <div>
-            <p class="w-[520px] h-32 pb-6">
-              The recent Quota movement has resulted in numerous injuries and
-              significant hardship for many individuals. Your support is crucial
-              in providing medical assistance, rehabilitation, and necessary
-              supplies to those affected. By contributing, you help ensure that
-              injured individuals receive the care and support they need during
-              this challenging time.
-            </p>
-          </div>
-          <div>
-            <input
-              type="text"
-              placeholder="Write Donation Amount"
-              id="quota-input-money"
-              class="input input-bordered w-full max-w-auto"
+        <div
+          class="w-auto h-[453px] p-8 mb-8 card lg:card-side bg-base-100 shadow-xl"
+        >
+          <!-- Image Body -->
+          <figure>
+            <img
+              class="w-[522px] h-[389px] self-stretch"
+              src="./assets/noakhali.png"
+              alt="flood"
             />
-          </div>
-          <div>
-            <button
-              id="btn-quota-donate"
-              class="btn w-full text-[#111111] bg-[#B4F461]"
+          </figure>
+
+          <!-- Card Text -->
+          <div class="pl-8 space-y-6">
+            <div
+              class="flex w-40 h-11 text-xl rounded-lg text-center justify-center items-center font-semibold text-[#111111] bg-[#111111]/5"
             >
-              Donate Now
-            </button>
+              <img class="pr-2" src="./assets/coin.png" alt="coin-icon" /><span
+                id="feni-new-balance"
+                >0</span
+              ><span class="pl-1">BDT</span>
+            </div>
+
+            <div>
+              <h2 class="card-title">
+                Donate for Flood Relief in Feni,Bangladesh
+              </h2>
+            </div>
+            <div>
+              <p class="w-[520px] h-32 pb-6">
+                The recent floods in Feni have devastated local communities,
+                leading to severe disruption and loss. Your generous donation
+                will help provide immediate aid, including food, clean water,
+                and medical supplies, to those affected by this calamity.
+                Together, we can offer crucial support and help rebuild lives in
+                the aftermath of this disaster.
+              </p>
+            </div>
+            <div>
+              <input
+                type="text"
+                placeholder="Write Donation Amount"
+                id="feni-input-money"
+                class="input input-bordered w-full max-w-auto"
+              />
+            </div>
+            <div>
+              <button
+                id="btn-feni-donate"
+                class="btn w-full text-[#111111] bg-[#B4F461]"
+              >
+                Donate Now
+              </button>
+            </div>
           </div>
         </div>
+
+        <!-- CARD NO. #2 END -->
+
+        <!-- CARD NO. #3 START -->
+
+        <div
+          class="w-auto h-[453px] p-8 mb-8 card lg:card-side bg-base-100 shadow-xl"
+        >
+          <!-- Image Body -->
+          <figure>
+            <img
+              class="w-[522px] h-[389px] self-stretch"
+              src="./assets/noakhali.png"
+              alt="flood"
+            />
+          </figure>
+
+          <!-- Card Text -->
+          <div class="pl-8 space-y-6">
+            <div
+              class="flex w-40 h-11 text-xl rounded-lg text-center justify-center items-center font-semibold text-[#111111] bg-[#111111]/5"
+            >
+              <img class="pr-2" src="./assets/coin.png" alt="coin-icon" /><span
+                id="quota-new-balance"
+                >0</span
+              ><span class="pl-1">BDT</span>
+            </div>
+
+            <div>
+              <h2 class="card-title">Aid for Injured in the Quota Movement</h2>
+            </div>
+            <div>
+              <p class="w-[520px] h-32 pb-6">
+                The recent Quota movement has resulted in numerous injuries and
+                significant hardship for many individuals. Your support is
+                crucial in providing medical assistance, rehabilitation, and
+                necessary supplies to those affected. By contributing, you help
+                ensure that injured individuals receive the care and support
+                they need during this challenging time.
+              </p>
+            </div>
+            <div>
+              <input
+                type="text"
+                placeholder="Write Donation Amount"
+                id="quota-input-money"
+                class="input input-bordered w-full max-w-auto"
+              />
+            </div>
+            <div>
+              <button
+                id="btn-quota-donate"
+                class="btn w-full text-[#111111] bg-[#B4F461]"
+              >
+                Donate Now
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <!-- CARD NO. #3 END -->
       </div>
-      <!-- CARD NO. #3 END -->
     </main>
 
-    <!-- Javascript  -->
+    <!-- JavaScript  -->
+
     <script src="./js/donateMoney.js"></script>
     <script src="./js/currentBalance.js"></script>
     <script src="./js/utilities.js"></script>
+    <script src="./js/features.js"></script>
   </body>
 </html>
